# openskyengine

./: .gitignore  CMakeLists.txt  README.md  build.bat  main.cpp  main.h  main_.cpp  old_main.cpp  test_object.cpp  test_object.h
core/: _object.h  gstring.cpp  gstring.h  input_event.cpp  input_event.h  main_loop.cpp  main_loop.h  my_string.cpp  my_string.h  node.cpp  node.h  object.cpp  object.h  reference.h  window.cpp  window.h
core/display/: display_server.cpp  display_server.h
core/math/: vector_2.cpp  vector_2.h  vector_2i.cpp  vector_2i.h
user/: node_2d.cpp  node_2d.h  resource.cpp  resource.h  test.cpp  test.h
